crates/credential/tests/probes/scheme_guard_clone.stderr
error[E0277]: the trait bound `SchemeGuard<'a, ApiKeyCredential>: Clone` is not satisfied
  --> tests/probes/scheme_guard_clone.rs:18:6
   |
18 |     <SchemeGuard<'a, ApiKeyCredential> as Clone>::clone(g)
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `SchemeGuard<'a, ApiKeyCredential>`
